@@ -67,8 +67,10 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] option to auto turn off the radio when DB manager is requested to help users that have the power button unavailable. (collapsed view, no top tools and use autostart)
 - [add] shift left click on SPLIT in the vfo will toggle QSPLIT, only when rx2 is off
 - [add] hold shift when clicking setup from the menu strip to show setup. Especially useful if one extra mouse click is too much for you
+- [add] support for tci msg line_out_start:0;  line_out_stop:0;    which have been repurposed to control vac1 on/off, support for tci msg line_out_start:1;  line_out_stop:1;   which have been repurposed to control  vac2 on/off
 - [change] meter container borders have been reduced
 - [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
+- [change] containers no longer store/convert all skin meter images, only the ones required for that specific container. Considerable memory savings
 - [change] filter setup form now stores/recalls location
 - [change] Button actions processed more simply when G2 enabled (no shift action etc) - G8NJJ
 - [change] rotator meter item now can be shown in az/ele/both mode. Requires you to remove-add the rotator if you were using it
